...
                          const Gap(32),
                          SizedBox(
                            width: double.infinity,
                            height: 50,
                            child: ElevatedButton(
                              onPressed: () => controller.goToRegister(),
                              child: const Text('Mulai sekarang'),
                            ),
                          ),
                          const Gap(12),
                          SizedBox(
                            width: double.infinity,
                            height: 50,
...
